# mcp-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml
cli/: Cargo.toml  README.md
cli/src/: README.md  main.rs
docs/: README.md  SPECIFICATION.md
examples/: README.md
javascript/: README.md  package.json
javascript/src/: README.md  client.ts  exceptions.ts  index.ts
javascript/tests/: README.md  client.test.ts
python/: README.md
python/mcp_protocol/: README.md  __init__.py  client.py  exceptions.py
python/tests/: INTEGRATION_TESTS.md  README.md  test_client.py
tests/: README.md  integration_test.rs
