[package]
name = "mcp-cli"
version = "0.1.0"
edition = "2021"
description = "mcp:// protocol CLI tool"
license = "MIT"
repository = "https://github.com/mcp-city/mcp-protocol"
authors = ["MCP.city Organization"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"

[dev-dependencies]
mockito = "1.0"
